初步完成 系统资源页

--- a/src/coms/layout/header/header.html
+++ b/src/coms/layout/header/header.html
@@ -1,13 +1,13 @@
 ﻿<div id="header">
 	<div class="header-top container">
-		<img class="logo" src="assets/images/logo.png" />
+		<img class="logo" src="assets/img/logo.png" />
 		<ul class="message">
 			<li><a href="#">消息</a></li>
 			<li><a href="#">帮助中心</a></li>
 			<li><a href="#">退出</a></li>
 		</ul>
 	</div>
-	<div class="container banner"><img src="assets/images/banner.png" /></div>
+	<div class="container banner"><img src="assets/img/banner.png" /></div>
 
 	<div class="banner-footer">
 		<div class="banner-footer-header"></div>
@@ -22,8 +22,8 @@
 				<li><a href="#">区本资源</a></li>
 				<li><a href="#">学生学习空间</a></li>
 				<li><a href="#">资源定制</a></li>
-				<li><a href="#"><img src="assets/images/profile.png"/>个人中心</a></li>
-				<li><a href="#"><img src="assets/images/shopcart.png"/>备课夹</a></li>
+				<li><a href="#"><img src="assets/img/profile.png"/>个人中心</a></li>
+				<li><a href="#"><img src="assets/img/shopcart.png"/>备课夹</a></li>
 			</ul>
 		</div>
 	</div>
