--- a/src/coms/system-res/views/sysres-content.html
+++ b/src/coms/system-res/views/sysres-content.html
@@ -1,3 +1,4 @@
+<div class="res-content-header"></div>
 <div id="res-content-right">
 	<div class="res-header-catogry">
 		<span class="catogry-item">全部</span>
@@ -22,335 +23,56 @@
 		<span class="type-list">教案</span>
 		<span class="type-list">文本</span>
 		<span class="type-list">试题</span>
-		<div class="message-tab">
-			<img src="assets/img/s-g.png" />
-			<a>推荐指数</a>
-			<img src="assets/img/s-c.png" />
-			<a>评分星级</a>
-			<img src="assets/img/s-g.png" />
-			<a>下载次数</a>
-			<img src="assets/img/s-g.png" />
-			<a>收藏次数</a>
-			<img src="assets/img/s-g.png" />
-			<a>浏览次数</a>
-			<img class="meg-tab1" src="assets/img/tab1.png" />
-			<img class="meg-tab2" src="assets/img/tab2.png" />
-		</div>
 	</div>
-	<div class="res-r-main">
-		<ul class="res-ul">
-			<li class="current-style">
-				<span class="span1">
-									<input class="in-checkbox" type="checkbox">
-									<img class="check-img" src="assets/img/d.png"></span>
-				<span class="span2">
-									<img src="assets/img/title.jpg"></span>
-				<span class="span3">
-									<p class="text-title">《触摸春天》生字学习</p>
-									<p class="text-size">大小：10M</p>
-								</span>
-				<span class="span4">
-									<!-- <img src="assets/img/c1.png">
-									<img src="assets/img/c2.png">
-									<img src="assets/img/c3.png">--></span>
-				<span class="span5">
-									<p>类型:<a>动画</a></p>
-									<p>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-									</p> 
-									<p class="qu">区</p>
-								</span>
-			</li>
-			<li class="current-style">
-				<span class="span1">
-									<input class="in-checkbox" type="checkbox">
-									<img class="check-img" src="assets/img/d.png"></span>
-				<span class="span2">
-									<img src="assets/img/title.jpg"></span>
-				<span class="span3">
-									<p class="text-title">《触摸春天》生字学习</p>
-									<p class="text-size">大小：10M</p>
-								</span>
-				<span class="span4">
-									<!-- <img src="assets/img/c1.png">
-									<img src="assets/img/c2.png">
-									<img src="assets/img/c3.png">--></span>
-				<span class="span5">
-									<p>类型:<a>动画</a></p>
-									<p>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-									</p> 
-									<p>于2015/12/14共享到校</p>
-								</span>
-			</li>
-			<li class="current-style">
-				<span class="span1">
-									<input class="in-checkbox" type="checkbox">
-									<img class="check-img" src="assets/img/d.png"></span>
-				<span class="span2">
-									<img src="assets/img/title.jpg"></span>
-				<span class="span3">
-									<p class="text-title">《触摸春天》生字学习</p>
-									<p class="text-size">大小：10M</p>
-								</span>
-				<span class="span4">
-									<!-- <img src="assets/img/c1.png">
-									<img src="assets/img/c2.png">
-									<img src="assets/img/c3.png">--></span>
-				<span class="span5">
-									<p>类型:<a>动画</a></p>
-									<p>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-									</p> 
-									<p>于2015/12/14共享到校</p>
-								</span>
-			</li>
-			<li class="current-style">
-				<span class="span1">
-									<input class="in-checkbox" type="checkbox">
-									<img class="check-img" src="assets/img/d.png"></span>
-				<span class="span2">
-									<img src="assets/img/title.jpg"></span>
-				<span class="span3">
-									<p class="text-title">《触摸春天》生字学习</p>
-									<p class="text-size">大小：10M</p>
-								</span>
-				<span class="span4">
-									<!-- <img src="assets/img/c1.png">
-									<img src="assets/img/c2.png">
-									<img src="assets/img/c3.png">--></span>
-				<span class="span5">
-									<p>类型:<a>动画</a></p>
-									<p>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-									</p> 
-									<p>于2015/12/14共享到校</p>
-								</span>
-			</li>
-			<li class="current-style">
-				<span class="span1">
-									<input class="in-checkbox" type="checkbox">
-									<img class="check-img" src="assets/img/d.png"></span>
-				<span class="span2">
-									<img src="assets/img/title.jpg"></span>
-				<span class="span3">
-									<p class="text-title">《触摸春天》生字学习</p>
-									<p class="text-size">大小：10M</p>
-								</span>
-				<span class="span4">
-									<!-- <img src="assets/img/c1.png">
-									<img src="assets/img/c2.png">
-									<img src="assets/img/c3.png">--></span>
-				<span class="span5">
-									<p>类型:<a>动画</a></p>
-									<p>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-										<img src="assets/img/s-y.png"/>
-									</p> 
-									<p>于2015/12/14共享到校</p>
-								</span>
-			</li>
+	<div class="statistic-tab">
+		<span class="statistic-item"><i class="icon-bar-chart"></i>推荐指数</span>
+		<span class="statistic-item"><i class="icon-bar-chart"></i>评分星级</span>
+		<span class="statistic-item"><i class="icon-bar-chart"></i>下载次数</span>
+		<span class="statistic-item"><i class="icon-bar-chart"></i>收藏次数</span>
+		<span class="statistic-item"><i class="icon-bar-chart"></i>浏览次数</span>
+		<span class="statistic-item"></span>
+		<span class="statistic-item" ng-click="switchList(true)"><i class="icon-th-list"></i></span>
+		<span class="statistic-item" ng-click="switchList(false)"><i class="icon-th-large"></i></span>
+	</div>
 
-			<div class="page">
-				<img src="assets/img/l1.png">
-				<a class="a-checked">1</a>
-				<a>2</a> <i>...</i>
-				<a>5</a>
-				<img src="assets/img/r1.png" />
-				<a class="go-style">GO</a>
-				<input type="text" />
-				<a class="go">转到</a>
-			</div>
+	<div class="res-list-main">
+		<ul class="res-ul-list" ng-show="isList">
+			<li class="res-list-item" ng-repeat="list in [0,1,2,3,4,5,6,7,8]">
+				<input class="res-checkbox" type="checkbox">
+				<img class="res-list-thumb" src="assets/img/title.jpg">
+				<span class="res-list-info">
+					<label class="res-title">《触摸春天》生字学习</label><br>
+					<label class="res-type">类型: 动画</label>
+					<label class="res-size">大小：10M</label><br>
+					<label class="res-star"><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i></label>
+					
+					<label class="res-number">281浏览/5下载</label>
+				</span>
+				<span class="res-list-tools">
+					<label class="res-select">加入备课夹</label><br>
+					<label class="res-download"><i class="icon-download-alt"></i>点击下载</label>
+				</span>
+			</li>
 		</ul>
+		<ul class="res-ul-thubmlist" ng-show="!isList">
+			<li class="res-thubmlist-item col-md-4" ng-repeat="list in [0,1,2,3,4,5,6,7,8]">
+				<input class="res-checkbox" type="checkbox">
+				<img class="res-thubmlist-thumb" src="assets/img/title.jpg">
+				<span class="res-thubmlist-info">
+					<label class="res-title">《触摸春天》生字学习</label><br>
+					<label class="res-type">类型: 动画</label>
+					<label class="res-size">大小：10M</label><br>
+					<label class="res-star"><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i></label>
+					
+					<label class="res-number">281浏览/5下载</label>
+				</span>
+				<span class="res-thubmlist-tools">
+					<label class="res-download"><i class="icon-download-alt"></i>点击下载</label>
+					<label class="res-select">加入备课夹</label>
+				</span>
+			</li>
+		</ul>
+		<div style="clear:both"></div>
+		<div style="width:100%;margin: 25px;"><img style="width:90%;" src="assets/img/tmp.png"/></div>
 	</div>
-	<div class="res-r-main-s">
-		<div class="li-s">
-			<img class="li-img" src="assets/img/title.jpg" />
-			<p class="img-title">Don't eat in class-Class one unit one Llstanbul</p>
-			<div class="s-left">
-				<p>多媒体教辅</p>
-				<p>大小：<a>4.1M</a></p>
-				<p><a class="s-left-num">210</a>浏览/<a class="q-c">5</a>下载/<a class="s-left-num">20</a>收藏</p>
-			</div>
-			<div class="i-right">
-				<p class="i-right-1">
-					<img src="assets/img/s-y.png" />
-					<img src="assets/img/s-y.png" />
-					<img src="assets/img/s-y.png" />
-					<img src="assets/img/s-y.png" />
-					<img src="assets/img/s-y.png" />
-				</p>
-				<p class="i-right-2">
-					<img class="res1" src="assets/img/t1.png" />
-					<img class="res2" src="assets/img/c2.png" />
-				</p>
-			</div>
-		</div>
-		<div class="li-s">
-			<img class="li-img" src="assets/img/title.jpg" />
-			<p class="img-title">Don't eat in class-Class one unit one Llstanbul</p>
-			<div class="s-left">
-				<p>多媒体教辅</p>
-				<p>大小：<a>4.1M</a></p>
-				<p><a class="q-c">210</a>浏览/<a class="q-c">5</a>下载/<a class="q-c">20</a>收藏</p>
-			</div>
-			<div class="i-right">
-				<p class="i-right-1">
-					<img src="assets/img/s-y.png" />
-					<img src="assets/img/s-y.png" />
-					<img src="assets/img/s-y.png" />
-					<img src="assets/img/s-y.png" />
-					<img src="assets/img/s-y.png" />
-				</p>
-				<p class="i-right-2">
-					<img class="res1" src="assets/img/t1.png" />
-					<img class="res2" src="assets/img/c2.png" />
-				</p>
-			</div>
-		</div>
-		<div class="li-s">
-			<img class="li-img" src="assets/img/title.jpg" />
-			<p class="img-title">Don't eat in class-Class one unit one Llstanbul</p>
-			<div class="s-left">
-				<p>多媒体教辅</p>
-				<p>大小：<a>4.1M</a></p>
-				<p><a class="q-c">210</a>浏览/<a class="q-c">5</a>下载/<a class="q-c">20</a>收藏</p>
-			</div>
-			<div class="i-right">
-				<p class="i-right-1">
-					<img src="assets/img/s-y.png" />
-					<img src="assets/img/s-y.png" />
-
-				</p>
-				<p class="i-right-2">
-					<img class="res1" src="assets/img/t1.png" />
-					<img class="res2" src="assets/img/c2.png" />
-				</p>
-			</div>
-		</div>
-		<div class="li-s">
-			<img class="li-img" src="assets/img/title.jpg" />
-			<p class="img-title">Don't eat in class-Class one unit one Llstanbul</p>
-			<div class="s-left">
-				<p>多媒体教辅</p>
-				<p>大小：<a>4.1M</a></p>
-				<p><a class="q-c">210</a>浏览/<a class="q-c">5</a>下载/<a class="q-c">20</a>收藏</p>
-			</div>
-			<div class="i-right">
-				<p class="i-right-1">
-					<img src="assets/img/s-y.png" />
-					<img src="assets/img/s-y.png" />
-					<img src="assets/img/s-y.png" />
-					<img src="assets/img/s-y.png" />
-					<img src="assets/img/s-y.png" />
-				</p>
-				<p class="i-right-2">
-					<img class="res1" src="assets/img/t1.png" />
-					<img class="res2" src="assets/img/c2.png" />
-				</p>
-			</div>
-		</div>
-		<div class="li-s">
-			<img class="li-img" src="assets/img/title.jpg" />
-			<p class="img-title">Don't eat in class-Class one unit one Llstanbul</p>
-			<div class="s-left">
-				<p>多媒体教辅</p>
-				<p>大小：<a>4.1M</a></p>
-				<p><a class="q-c">210</a>浏览/<a class="q-c">5</a>下载/<a class="q-c">20</a>收藏</p>
-			</div>
-			<div class="i-right">
-				<p class="i-right-1">
-					<img src="assets/img/s-y.png" />
-					<img src="assets/img/s-y.png" />
-					<img src="assets/img/s-y.png" />
-					<img src="assets/img/s-y.png" />
-					<img src="assets/img/s-y.png" />
-				</p>
-				<p class="i-right-2">
-					<img class="res1" src="assets/img/t1.png" />
-					<img class="res2" src="assets/img/c2.png" />
-				</p>
-			</div>
-		</div>
-		<div class="li-s">
-			<img class="li-img" src="assets/img/title.jpg" />
-			<p class="img-title">Don't eat in class-Class one unit one Llstanbul</p>
-			<div class="s-left">
-				<p>多媒体教辅</p>
-				<p>大小：<a>4.1M</a></p>
-				<p><a class="q-c">210</a>浏览/<a class="q-c">5</a>下载/<a class="q-c">20</a>收藏</p>
-			</div>
-			<div class="i-right">
-				<p class="i-right-1">
-					<img src="assets/img/s-y.png" />
-					<img src="assets/img/s-y.png" />
-					<img src="assets/img/s-y.png" />
-					<img src="assets/img/s-y.png" />
-					<img src="assets/img/s-y.png" />
-				</p>
-				<p class="i-right-2">
-					<img class="res1" src="assets/img/t1.png" />
-					<img class="res2" src="assets/img/c2.png" />
-				</p>
-			</div>
-		</div>
-		<div class="li-s">
-			<img class="li-img" src="assets/img/title.jpg" />
-			<p class="img-title">Don't eat in class-Class one unit one Llstanbul</p>
-			<div class="s-left">
-				<p>多媒体教辅</p>
-				<p>大小：<a>4.1M</a></p>
-				<p><a class="q-c">210</a>浏览/<a class="q-c">5</a>下载/<a class="q-c">20</a>收藏</p>
-			</div>
-			<div class="i-right">
-				<p class="i-right-1">
-					<img src="assets/img/s-y.png" />
-					<img src="assets/img/s-y.png" />
-					<img src="assets/img/s-y.png" />
-					<img src="assets/img/s-y.png" />
-					<img src="assets/img/s-y.png" />
-				</p>
-				<p class="i-right-2">
-					<img class="res1" src="assets/img/t1.png" />
-					<img class="res2" src="assets/img/c2.png" />
-				</p>
-			</div>
-		</div>
-	</div>
-</div>
-<div class="res-r-hide">b
-</div>
-<div class="res-r-hide">c
-</div>
-<div class="res-r-hide">d
-</div>
-<div class="res-r-hide">e
-</div>
-<div class="res-r-hide">g
-</div>
-<div class="res-r-hide">h
-</div>
-<div class="res-r-hide">i
-</div>
-</div>
-</div>
 </div>
