--- a/src/less/header.less
+++ b/src/less/header.less
@@ -36,7 +36,7 @@
 
 #header .banner-footer-header{
     height: 7px;
-    background: url(assets/images/banner-footer.png) repeat-x;
+    background: url(assets/img/banner-footer.png) repeat-x;
 }
 #header .banner-footer-footer{
     height: 35px;
@@ -64,11 +64,11 @@
     padding: 0;
 }
 .main-nav li>a:visited,.main-nav li>a:hover,.main-nav li>a:focus{
-    background: url(assets/images/nav_active.png) no-repeat;
+    background: url(assets/img/nav_active.png) no-repeat;
     
 }
 .main-nav .onactive{
-    background: url(assets/images/nav_active.png) no-repeat; 
+    background: url(assets/img/nav_active.png) no-repeat; 
 }
 
 
