--- a/src/coms/system-res/views/sysres-content.html
+++ b/src/coms/system-res/views/sysres-content.html
@@ -49,7 +49,7 @@
 					<label class="res-number">281浏览/5下载</label>
 				</span>
 				<span class="res-list-tools">
-					<label class="res-select">加入备课夹</label><br>
+					<add-to-cart-button class="res-select">加入备课夹</add-to-cart-button><br>
 					<label class="res-download"><i class="icon-download-alt"></i>点击下载</label>
 				</span>
 			</li>
@@ -68,7 +68,7 @@
 				</span>
 				<span class="res-thubmlist-tools">
 					<label class="res-download"><i class="icon-download-alt"></i>点击下载</label>
-					<label class="res-select">加入备课夹</label>
+					<add-to-cart-button class="res-select">加入备课夹</add-to-cart-button>
 				</span>
 			</li>
 		</ul>
