--- a/src/coms/system-res/views/systemres.html
+++ b/src/coms/system-res/views/systemres.html
@@ -1,7 +1,7 @@
 ﻿<div class="container" id="res-container">
 	<!--header导航-->
 	<div data-ng-include="'/coms/system-res/views/sysres-header.html'"></div>
-	
+	{{test}}
 	<!--左侧目录-->
 	<div class="col-md-3 catalog">
 		<div class="catalog-header"></div>
