--- a/src/less/systemres.less
+++ b/src/less/systemres.less
@@ -77,7 +77,9 @@
     float: left;
     margin-top: 5px;
 }
-
+.menu-drop-list li:hover{
+    color:#0094CE;
+}
 
 .res-header .left-tips {
   padding-left: 30px;
@@ -175,6 +177,10 @@
     cursor: pointer;
 }
 .res-navbody .select-item:hover {
+  color: #FFF;
+  background: @color8;
+}
+.res-navbody .selected {
   color: #FFF;
   background: @color8;
 }
