--- a/src/less/systemres.less
+++ b/src/less/systemres.less
@@ -21,6 +21,7 @@
     height: 30px;
     line-height: 30px;
     padding-right: 0;
+    cursor: pointer;
 }
 
 .menu-drop .select-current{
@@ -41,6 +42,9 @@
 }
 .menu-drop .icon-angle-down:before, .menu-drop .icon-angle-up:before, .menu-drop .icon-remove:before{
     padding-right: 5px; 
+}
+.menu-drop .icon-remove:hover{
+    color: #DF3D6D;
 }
 .menu-drop .menu-drop-main{
     position: absolute;
@@ -63,6 +67,7 @@
     float: left;
     padding:8px;
     line-height: 20px;
+    cursor: pointer;
 }
 .menu-drop:hover .icon-angle-down{
     display: none;
