增加区本资源 和校本资源

--- a/src/coms/layout/header/header.html
+++ b/src/coms/layout/header/header.html
@@ -17,9 +17,9 @@
 		<div class="container">
 
 			<ul class="nav">
-				<li><a href="#">系统资源</a></li>
-				<li><a href="#">校本资源</a></li>
-				<li><a href="#">区本资源</a></li>
+				<li><a ui-sref="systemres">系统资源</a></li>
+				<li><a ui-sref="schoolres">校本资源</a></li>
+				<li><a ui-sref="areares">区本资源</a></li>
 				<li><a href="#">学生学习空间</a></li>
 				<li><a href="#">资源定制</a></li>
 				<li><a href="#"><img src="assets/img/profile.png"/>个人中心</a></li>
