--- a/src/coms/tree/views/tree.html
+++ b/src/coms/tree/views/tree.html
@@ -1,6 +1,4 @@
-﻿
-
-<div ng-controller="TreeController">
+﻿<div ng-controller="TreeController">
  <treecontrol class="tree-light" tree-model="treedata" on-selection="showSelected(node)" expanded-nodes="expandedNodes" options="opts">
      label: {{node.label}} ({{node.id}})
  </treecontrol>
